--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="banner">
         <article class="banner_text">
           <h2 class="banner_text--title">
-            Hi!! My name is Ivan and this is my portfolio </h2> 
+            Hi!!<br> My name is Ivan and this is my portfolio. </h2> 
         </article>
       </div>
       <section class="abouts" id="abouts">
@@ -139,10 +139,10 @@
           <p class="contact_text--paragraph">
             Enzo Ivan Valdez<br />Buenos Aires, Argentina
           </p>
-          <figure class="contact_text--image">
-            <img src="./src/assets/images/Perfil.jpg" alt="" />
-          </figure>
         </article>
+        <figure class="contact_image">
+          <img src="./src/assets/images/Perfil.jpg" alt="" />
+        </figure>
       </section>
     </main>
     <div class="go">
